# Choreo

./: .gitignore  .mcp.json  CLAUDE.md  README.md
backend/: .env  .env.example  Makefile  config.example.yaml  config.yaml  pyproject.toml
backend/choreo/: api.py  config.py  db.py  model_factory.py  sandbox.py
backend/choreo/activity/: profiler.py
backend/choreo/agents/: __init__.py  choreo_agent.py  prompt.py  registry.py
backend/choreo/auth/: deps.py  jwt.py
backend/choreo/channel/: __init__.py  manager.py  router.py
backend/choreo/gateway/: app.py
backend/choreo/kb/: compiler_prompt.py  graph_parser.py  init.py  profile_prompt.py
backend/choreo/knowledge_sources/: base.py  factory.py  feishu_wiki.py  github_source.py  puller.py
backend/choreo/mcp/: __init__.py  builtin.py  http_stdio_bridge.py  manager.py
backend/choreo/models/: history.py  mcp.py  patched_openai.py  run.py  skill.py  task.py  thread.py
backend/choreo/sandbox/: __init__.py  base.py  factory.py  manager.py
backend/choreo/scheduler/: __init__.py  (+2 more)
backend/tasks/: test_choreo.py
backend/tests/: conftest.py  test_activity.py  test_agent_langsmith.py  test_auth_jwt.py  test_channel_manager.py  test_channel_router.py  test_channel_row.py  test_context_compression.py  test_feishu_adapter.py  test_headless_agent.py  test_importer.py  test_kb_graph_parser.py  test_kb_init.py  test_kb_tools.py  test_knowledge_router.py  test_mcp_manager.py  test_platform_base.py  test_review_worker.py  test_scheduler_runner.py  test_skill_store.py  test_skill_tools.py  test_subagent_streaming.py
(+173 files in other folders)
