[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "choreo"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "pydantic-settings>=2.0",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "pyyaml>=6.0.3",
    "greenlet>=3.5.1",
    "psycopg[binary,pool]>=3.3.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "daytona>=0.182.0",
    "agent-sandbox>=0.0.30",
    "docker>=7.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["choreo"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
